human-intervention-logs/io.fabric8:kubernetes-model-core:7.7.0/gradle-test/gradle-test-2026-06-06T10-37-49-947476Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: io.fabric8:kubernetes-model-core:7.7.0
Command: `/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7959-4d408f18/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources NO-SOURCE
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7959-4d408f18/tests/src/io.fabric8/kubernetes-model-core/7.7.0/src/test/java/io_fabric8/kubernetes_model_core/Kubernetes_model_coreTest.java:294: error: method withNewMetadata in class ServiceListFluent<A> cannot be applied to given types;
> Task :compileTestJava FAILED
                .withNewMetadata(null, null, "100", null)
                ^
  required: no arguments
  found:    <null>,<null>,String,<null>
  reason: actual and formal argument lists differ in length
  where A is a type-variable:
    A extends ServiceListFluent<A> declared in class ServiceListFluent
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7959-4d408f18/tests/src/io.fabric8/kubernetes-model-core/7.7.0/src/test/java/io_fabric8/kubernetes_model_core/Kubernetes_model_coreTest.java:342: error: method withNewMetadata in class ConfigMapListFluent<A> cannot be applied to given types;
                .withNewMetadata(null, null, "44", null)
                ^
  required: no arguments
  found:    <null>,<null>,String,<null>
  reason: actual and formal argument lists differ in length
  where A is a type-variable:
    A extends ConfigMapListFluent<A> declared in class ConfigMapListFluent
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7959-4d408f18/tests/src/io.fabric8/kubernetes-model-core/7.7.0/src/test/java/io_fabric8/kubernetes_model_core/Kubernetes_model_coreTest.java:695: error: method withNewMetadata in class EventListFluent<A> cannot be applied to given types;
                .withNewMetadata(null, null, "72", null)
                ^
  required: no arguments
  found:    <null>,<null>,String,<null>
  reason: actual and formal argument lists differ in length
  where A is a type-variable:
    A extends EventListFluent<A> declared in class EventListFluent
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7959-4d408f18/tests/src/io.fabric8/kubernetes-model-core/7.7.0/src/test/java/io_fabric8/kubernetes_model_core/Kubernetes_model_coreTest.java:733: error: method withNewMetadata in class PodListFluent<A> cannot be applied to given types;
                .withNewMetadata(null, null, "55", null)
                ^
  required: no arguments
  found:    <null>,<null>,String,<null>
  reason: actual and formal argument lists differ in length
  where A is a type-variable:

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7959-4d408f18/tests/src/io.fabric8/kubernetes-model-core/7.7.0/build/reports/problems/problems-report.html
    A extends PodListFluent<A> declared in class PodListFluent
4 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7959-4d408f18/tests/src/io.fabric8/kubernetes-model-core/7.7.0/src/test/java/io_fabric8/kubernetes_model_core/Kubernetes_model_coreTest.java:294: error: method withNewMetadata in class ServiceListFluent<A> cannot be applied to given types;
                  .withNewMetadata(null, null, "100", null)
                  ^
    required: no arguments
    found:    <null>,<null>,String,<null>
    reason: actual and formal argument lists differ in length
    where A is a type-variable:
      A extends ServiceListFluent<A> declared in class ServiceListFluent
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7959-4d408f18/tests/src/io.fabric8/kubernetes-model-core/7.7.0/src/test/java/io_fabric8/kubernetes_model_core/Kubernetes_model_coreTest.java:342: error: method withNewMetadata in class ConfigMapListFluent<A> cannot be applied to given types;
                  .withNewMetadata(null, null, "44", null)
                  ^
    required: no arguments
    found:    <null>,<null>,String,<null>
    reason: actual and formal argument lists differ in length
    where A is a type-variable:
      A extends ConfigMapListFluent<A> declared in class ConfigMapListFluent
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7959-4d408f18/tests/src/io.fabric8/kubernetes-model-core/7.7.0/src/test/java/io_fabric8/kubernetes_model_core/Kubernetes_model_coreTest.java:695: error: method withNewMetadata in class EventListFluent<A> cannot be applied to given types;
                  .withNewMetadata(null, null, "72", null)
                  ^
    required: no arguments
    found:    <null>,<null>,String,<null>
    reason: actual and formal argument lists differ in length
    where A is a type-variable:
      A extends EventListFluent<A> declared in class EventListFluent
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7959-4d408f18/tests/src/io.fabric8/kubernetes-model-core/7.7.0/src/test/java/io_fabric8/kubernetes_model_core/Kubernetes_model_coreTest.java:733: error: method withNewMetadata in class PodListFluent<A> cannot be applied to given types;
                  .withNewMetadata(null, null, "55", null)
                  ^
    required: no arguments
    found:    <null>,<null>,String,<null>

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.    reason: actual and formal argument lists differ in length

    where A is a type-variable:
      A extends PodListFluent<A> declared in class PodListFluent
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
13 actionable tasks: 5 executed, 8 up-to-date> Run with --scan to generate a Build Scan (Powered by Develocity).


BUILD FAILED in 7s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7959-4d408f18/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for io.fabric8:kubernetes-model-core:7.7.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 8s
9 actionable tasks: 1 executed, 8 up-to-date
